--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -49,3 +49,43 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539816891362
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 01b: The graph of function $f$ is given below. Estimate the value of $f(2)$.
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import numpy as np
+      from fractions import Fraction
+
+      _a2 = Fraction(4,7)
+      _a = _a2**0.5
+      _b = 1 - _a2/64
+      _c = Fraction(5,2) - _a2
+
+      _a*(1-_b)**0.5 + _c
+      _a*(3-_b)**0.5 + _c
+      _a/(2*(1-_b)**0.5)
+
+      fig, ax = plt.subplots()
+
+      x1 = np.arange(-3, 1.05, 0.05)
+      y1 = (x1+1)**2 - 2
+
+      x2 = np.arange(1, 3.05, 0.05)
+      #y2 = (x2-1)**0.5 + 2
+      y2 = _a*(x2 - _b)**0.5 + _c
+
+      ax.plot(x1, y1, color = 'r')
+      ax.plot(x2, y2, color = 'r')
+      ax.grid(color = '#cccccc')
+      ax.set_aspect('equal')
+      plt.show()
+
+      ```
+    Back: |
+      $\approx 2.75$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
