--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -209,3 +209,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539817474066
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 02: If $f(x) = x^3$, evaluate the difference quotient $\frac{f(2 + h) - f(2)}{h}$ and simplify your answer.
+    Back: |
+      $12 + 6h + h^2$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
