--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -218,3 +218,15 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539839980555
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 03a: Find the domain the following function:
+      $$
+      f(x) = \frac{2x + 1}{x^2 + x - 2}
+      $$
+    Back: |
+      $(-\infty, -2) \cup (-2, 1) \cup (1, \infty)$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
