--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -242,3 +242,15 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539840265295
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 03c: Find the domain the following function:
+      $$
+      h(x) = \sqrt{4 - x} + \sqrt{x^2 - 1}
+      $$
+    Back: |
+      $(-\infty, -1] \cup [1, 4]$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
