--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -254,3 +254,15 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539840473352
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 04a: How is the graph of the following function obtained from the graph of $f$?
+      $$
+      y = -f(x)
+      $$
+    Back: |
+      Reflect about the $x$-axis.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
