--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -290,3 +290,28 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539873125687
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 05a: Without using a calculator, make a rough sketch of the graph of the following function:
+      $$
+      y = x^3
+      $$
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(x**3, xlabel = '$x$', ylabel = '$y$', show = False)
+      p.xlim = (-6,6)
+      p.ylim = (-4,4)
+      p.show()
+      ```
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
