--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -340,3 +340,37 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539873127419
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 05c: Without using a calculator, make a rough sketch of the graph of the following function:
+      $$
+      y = (x - 2)^3 + 3
+      $$
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot((x - 2)**3 + 3, xlabel = '$x$', ylabel = '$y$', show = False)
+      p.xlim = (-6,6)
+      p.ylim = (-4,4)
+
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.plot(2, 3, 'ko', markersize = 4)
+      ax.text(2, 2.4, '$(2,3)$')
+
+      p._backend.show()
+      ```
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
