--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -563,3 +563,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539875926512
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 07a: If $f(x) = x^2 + 2x - 1$ and $g(x) = 2x - 3$, find $f \circ g$.
+    Back: |
+      $(f \circ g)(x) = 4x^2 - 8x + 2$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
