--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -572,3 +572,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539876023515
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 07b: If $f(x) = x^2 + 2x - 1$ and $g(x) = 2x - 3$, find $g \circ f$.
+    Back: |
+      $(g \circ f)(x) = 2x^2 + 4x - 5$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
