--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00C.yml
@@ -581,3 +581,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
+- id: 1539876023615
+  fields:
+    Front: |
+      CCAC 00.C (Functions) 07c: If $g(x) = 2x - 3$, find $g \circ g \circ g$.
+    Back: |
+      $(g \circ g \circ g)(x) = 8x - 21$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Sections 1.1-1.3 of CCAC.)
