--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
@@ -18,3 +18,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+- id: 1539876471179
+  fields:
+    Front: |
+      CCAC 00.D (Trigonometry) 01b: Convert $-18^\circ$ from degrees to radians.
+    Back: |
+      $- \pi / 10$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
