--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
@@ -27,3 +27,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+- id: 1539876982829
+  fields:
+    Front: |
+      CCAC 00.D (Trigonometry) 02a: Convert $5\pi/6$ from radians to degrees.
+    Back: |
+      $150^\circ$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
