--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
@@ -54,3 +54,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+- id: 1539876983163
+  fields:
+    Front: |
+      CCAC 00.D (Trigonometry) 04a: Find the exact value of $\tan(\pi / 3)$.
+    Back: |
+      $\sqrt{3}$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
