--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
@@ -63,3 +63,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+- id: 1539876983364
+  fields:
+    Front: |
+      CCAC 00.D (Trigonometry) 04b: Find the exact value of $\sin(7 \pi / 6)$.
+    Back: |
+      $-\frac{1}{2}$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
