--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00D.yml
@@ -72,3 +72,12 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
+- id: 1539876983495
+  fields:
+    Front: |
+      CCAC 00.D (Trigonometry) 04c: Find the exact value of $\sec(5 \pi / 3)$.
+    Back: |
+      $2$.
+
+      ---
+      (If you have had difficulty with this problem, you should look at Appendix C of CCAC.)
