--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
@@ -159,3 +159,41 @@ notes:
         ylim = (-1,3),
       )
       ```
+- id: 1542156832346
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.1 41: Find the domain and sketch the graph of the function:
+      $$
+      G(x) = \frac{3x + |x|}{x}
+      $$
+    Back: |
+      Domain: $(-\infty, 0) \cup (0, \infty)$.
+      ```{python echo = False}
+      import sympy as sy
+      from sympy import Abs
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (3*x + Abs(x))/x,
+        xlabel = '$x$',
+        ylabel = '$G(x)$',
+        xlim = (-4.5,4.5),
+        ylim = (-1,5),
+        show = False,
+      )
+
+      # Must manually enable backend without showing it.
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.plot(0, 2, 'ko', fillstyle='none', markersize = 5)
+      ax.plot(0, 4, 'ko', fillstyle='none', markersize = 5)
+      p._backend.show()
+      ```
