--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
@@ -197,3 +197,49 @@ notes:
       ax.plot(0, 4, 'ko', fillstyle='none', markersize = 5)
       p._backend.show()
       ```
+- id: 1542156832444
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.1 43: Find the domain and sketch the graph of the function:
+      $$
+      f(x) =
+      \begin{cases}
+        x + 2 &\text{ if } x < 0 \\
+        1 - x &\text{ if } x \ge 0 \\
+      \end{cases}
+      $$
+    Back: |
+      Domain: $(-\infty, \infty)$.
+      ```{python echo = False}
+      import sympy as sy
+      from sympy import Piecewise
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        Piecewise(
+          (x+2, x<0),
+          (1-x, 0<=x)
+        ),
+        xlabel = '$x$',
+        ylabel = '$f(x)$',
+        xlim = (-3,3),
+        ylim = (-1,3),
+        show = False,
+      )
+
+      # Must manually enable backend without showing it.
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      ax.plot(0, 2, 'ko', fillstyle='none', markersize = 5)
+      ax.plot(0, 1, 'ko', markersize = 5)
+
+      p._backend.show()
+      ```
