--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
@@ -363,3 +363,11 @@ notes:
       $$
       S(x) = x^2 + 8/x,\ 0 < x
       $$
+- id: 1542158602445
+  fields:
+    Front: |
+      CCAC 01.1 59: A box with an open top is to be constructed from a rectangular piece of cardboard with dimensions $12"$ by $20"$ by cutting out equal squares of side $x$ at each corner and then folding up the sides. Express the volume $V$ of the box as a function of $x$.
+    Back: |
+      $$
+      V(x) = 4x^3 - 64x^2 + 240x,\ 0 < x < 6
+      $$
