--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
@@ -396,3 +396,10 @@ notes:
       plt.yticks((0,5,10,15))
       plt.show()
       ```
+- id: 1542158955559
+  markdownMathExt: False
+  fields:
+    Front: |
+      CCAC 01.1 61b: In a certain country, income tax is assessed as follows. There is no tax on income up to $10,000. Any income over $10,000 is taxed at a rate of 10%, up to an income of $20,000. Any income over $20,000 is taxed at 15%. How much tax is assessed on an income of $14,000? On $26,000?
+    Back: |
+      $400, $1900
