--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
@@ -403,3 +403,30 @@ notes:
       CCAC 01.1 61b: In a certain country, income tax is assessed as follows. There is no tax on income up to $10,000. Any income over $10,000 is taxed at a rate of 10%, up to an income of $20,000. Any income over $20,000 is taxed at 15%. How much tax is assessed on an income of $14,000? On $26,000?
     Back: |
       $400, $1900
+- id: 1542158955670
+  markdownMathExt: False
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 01.1 61c: In a certain country, income tax is assessed as follows. There is no tax on income up to $10,000. Any income over $10,000 is taxed at a rate of 10%, up to an income of $20,000. Any income over $20,000 is taxed at 15%. Sketch the graph of the total assessed tax \\(T\\) as a function of the income \\(I\\).
+    Back: |
+      ...
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      fig, ax = plt.subplots()
+      ax.plot((0, 10000), (0,0), color = '#1f77b4')
+      ax.plot(10000, 0, 'ko', markersize = 5)
+      ax.plot((10000, 20000), (0,1000), color = '#1f77b4')
+      ax.plot(20000, 1000, 'ko', markersize = 5)
+      ax.plot((20000, 30000), (1000,2500), color = '#1f77b4')
+      ax.plot(30000, 2500, 'ko', markersize = 5)
+      ax.plot((30000, 35000), (2500,3250), color = '#1f77b4')
+      ax.set(xlabel = "$I$ (dollars)", ylabel = "$T$ (dollars)")
+      plt.xticks((0, 10000, 20000, 30000))
+      plt.yticks((0, 1000, 2500))
+      plt.show()
+      ```
