--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-2.yml
@@ -28,3 +28,12 @@ notes:
       $$
     Back: |
       Root.
+- id: 1542245228694
+  fields:
+    Front: |
+      CCAC 01.2 01c: Classify the function below as a power function, root function, polynomial (state its degree), rational function, algebraic function, trigonometric function, exponential function, or logarithmic function.
+      $$
+      h(x) = \frac{2x^3}{1-x^2}
+      $$
+    Back: |
+      Rational.
