--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-2.yml
@@ -46,3 +46,12 @@ notes:
       $$
     Back: |
       Polynomial, degree $2$.
+- id: 1542245228893
+  fields:
+    Front: |
+      CCAC 01.2 01e: Classify the function below as a power function, root function, polynomial (state its degree), rational function, algebraic function, trigonometric function, exponential function, or logarithmic function.
+      $$
+      v(t) = 5^t
+      $$
+    Back: |
+      Exponential.
