--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-1.yml
@@ -372,7 +372,7 @@ notes:
       V(x) = 4x^3 - 64x^2 + 240x,\ 0 < x < 6
       $$
 - id: 1542158775019
-  markdownMathExt: False
+  useMarkdownMathExt: False
   useMarkdown: pweave
   fields:
     Front: |
@@ -397,14 +397,14 @@ notes:
       plt.show()
       ```
 - id: 1542158955559
-  markdownMathExt: False
+  useMarkdownMathExt: False
   fields:
     Front: |
       CCAC 01.1 61b: In a certain country, income tax is assessed as follows. There is no tax on income up to $10,000. Any income over $10,000 is taxed at a rate of 10%, up to an income of $20,000. Any income over $20,000 is taxed at 15%. How much tax is assessed on an income of $14,000? On $26,000?
     Back: |
       $400, $1900
 - id: 1542158955670
-  markdownMathExt: False
+  useMarkdownMathExt: False
   useMarkdown: pweave
   fields:
     Front: |
